cabal-version:       3.0
Name:                hex
Version:             0.2.0
Synopsis:            Convert strings into hexadecimal and back.
Description:         Convert strings and bytestrings into hexadecimal and back.
License:             BSD-3-Clause
License-file:        COPYING
Copyright:           Taru Karttunen <taruti@taruti.net>
Author:              Taru Karttunen
Category:            Data
Maintainer:          taruti@taruti.net
Build-Depends:       base >= 4.10 && < 5, bytestring
Exposed-modules:     Data.Hex
Default-Extensions:  TypeSynonymInstances
GHC-Options:         -Wall
Build-Type:	     Simple

